# auth

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: gunicorn_config.py  settings.py  urls.py
config/settings/: base.py
config/settings/components/: apps.py  auth.py  cache.py  cors_headers.py  csrf.py  database.py  drf.py  drf_simple_jwt.py  drf_spectacular.py  env.py  fields.py  i18n.py  media.py  middleware.py  redis.py  security.py  session.py  static_files.py  templates.py
config/settings/rest_conf/: exception.py
infra/: run.sh
infra/nginx/: Dockerfile
infra/nginx/conf.d/: default.conf
postman/: Auth Collection.postman_collection.json  workspace.postman_globals.json
user/: admin.py  urls.py  utils.py
user/api/: fields.py  urls.py
user/api/serializers/: jwt_token.py  phone.py  user.py
user/api/views/: otp_verification.py  password_verification.py  profile.py  register.py
user/migrations/: 0001_initial.py
user/models/: _user.py  fields.py
user/services/: decorators.py  otp.py
user/services/verification/: abstract.py  otp.py  password.py
user/tests/: abstract_test_suit.py  factories.py  test_otp.py  test_password.py  test_registration.py
