[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Erfan Arefmehr <erfan.arefmehr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
