[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Erfan Arefmehr <erfan.arefmehr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
django-rest-framework = "^0.1.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
django-environ = "^0.11.2"
django-cors-headers = "^4.6.0"
drf-spectacular = "^0.28.0"
redis = "^5.2.1"
django-redis = "^5.4.0"
djangorestframework-simplejwt = "^5.3.1"
persian = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
